syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

package notification_service;

// Message for acknowledging notifications
message NotificationAck {
  string notification_id = 1;
}

// Message for the entity associated with the notification
message Entity {
  string id = 1;
  string type = 2;
  string data = 3;  // JSON data as string
}

// Structure of a notification payload
message NotificationPayload {
  string id = 1;
  string category = 2;
  string title = 3;
  string body = 4;
  string show = 5;
  string ttl = 6; // UTC Datetime String
  Entity entity = 7;
}

// Notification service with a single Bi-directional RPC method
service Notification {
  // The RPC method for streaming notifications based on acknowledgments
  rpc StreamPayload(stream NotificationAck) returns (stream NotificationPayload);
}
